# par-tutorial-learn

./: .gitignore  par-tutorial.cabal
code/: channels.hs  ffi.hs  fork.hs  geturls.hs  geturlscancel.hs  geturlsstm.hs  server.hs  tchanel.hs  timeout.hs
code/kmeans/: KMeansCommon.hs  kmeans-seq  kmeans-seq.hs  kmeans.hs
